--- a/Django/formclass/articles/templates/articles/detail.html
+++ b/Django/formclass/articles/templates/articles/detail.html
@@ -1,12 +1,23 @@
 {% extends 'base.html' %}
 
+{% load static %}
+
 {% block body %}
 
 <h1>Article Detail</h1>
 
+<img src="{% static 'chim and perl3.gif' %}" alt="침펄 - 그건 아마 우리의 잘못이 아닐거야"><br>
+<img src="{% static 'chim and perl2.gif' %}" alt="침펄 - 그건 아마 우리의 잘못이 아닐거야"><br>
+<img src="{% static 'chim and perl.gif' %}" alt="침펄 - 그건 아마 우리의 잘못이 아닐거야"><br>
+
 <p>PK: {{ article.pk }}</p>
 <p>제목: {{ article.title }}</p>
 <p>내용: {{ article.content }}</p>
+{% if article.image %}
+<p>
+    이미지: <img src="{{ article.image.url }}" alt="{{ article.image }}">
+</p>
+{% endif %}
 <p>생성 시각: {{ article.created_at }}</p>
 <p>수정 시각: {{ article.updated_at }}</p>
 
