--- a/Django/formclass/accounts/templates/accounts/password.html
+++ b/Django/formclass/accounts/templates/accounts/password.html
@@ -2,12 +2,12 @@
 
 {% block body %}
 
-<h1>Comments Edit</h1>
+<h1>Password Edit</h1>
 
 <form action="" method="POST">
     {% csrf_token %}
-    {{ form }}
-    <input type="submit">
+    {{ form.as_p }}
+    <input type="submit" value="Update">
 </form>
 
 {% endblock %}
