--- a/Django/formclass/articles/templates/articles/detail.html
+++ b/Django/formclass/articles/templates/articles/detail.html
@@ -1,57 +1,71 @@
 {% extends 'base.html' %}
 
-{% load static %}
-
 {% block body %}
 
 <h1>Article Detail</h1>
 
-<img src="{% static 'chim and perl3.gif' %}" alt="침펄 - 그건 아마 우리의 잘못이 아닐거야"><br>
-<img src="{% static 'chim and perl2.gif' %}" alt="침펄 - 그건 아마 우리의 잘못이 아닐거야"><br>
-<img src="{% static 'chim and perl.gif' %}" alt="침펄 - 그건 아마 우리의 잘못이 아닐거야"><br>
+<form action="{% url 'articles:like' article.pk %}" method="POST">
+    {% csrf_token %}
+    <input type="submit" value="{% if user in article.like_user.all %}UnLike{% else %}Like">
+</form>
+
+<p>
+    {{ article.like_users.all|length }}명이 좋아합니다.
+</p>
 
 <p>PK: {{ article.pk }}</p>
+<p>작성자: {{ article.user.username }}</p>
 <p>제목: {{ article.title }}</p>
 <p>내용: {{ article.content }}</p>
+
 {% if article.image %}
 <p>
     이미지: <img src="{{ article.image.url }}" alt="{{ article.image }}">
 </p>
 {% endif %}
+
 <p>생성 시각: {{ article.created_at }}</p>
 <p>수정 시각: {{ article.updated_at }}</p>
 
 <a href="{% url 'articles:index' %}">Index</a>
+{% if user == article.user %}
 <a href="{% url 'articles:edit' article.pk %}">Edit</a>
-<form action="{% url 'articles:delete' article.pk %}" method='POST'>
+<form action="{% url 'articles:delete' article.pk %}" method="POST">
     {% csrf_token %}
-    <input type="submit" value='Delete'>
+    <input type="submit" value="Delete">
 </form>
+{% endif %}
 
 <!-- 댓글 목록 -->
 <h3>댓글 목록 ({{ article.comment_set.all.count }})</h3>
-<!-- |length, .count -->
+<!-- |length , .count -->
 <ul>
     {% for comment in article.comment_set.all %}
     <li>
-        {{ comment.content }} - {{ comment.created_at }}
+        {{ comment.user.username }}: {{ comment.content }} - {{ comment.created_at }}
+        {% if user == comment.user %}
         <a href="{% url 'articles:comments_edit' article.pk comment.pk %}">Edit</a>
         <form action="{% url 'articles:comments_delete' article.pk comment.pk %}" method="POST">
             {% csrf_token %}
             <input type="submit" value="Delete">
         </form>
+        {% endif %}
     </li>
     {% empty %}
     <li>
-        작성된 댓글이 없습니다......ㅠ
+        작성된 댓글이 없습니다 :(
     </li>
     {% endfor %}
 </ul>
-<!-- 댓글 입력 창 -->
+
+<!-- 댓글 입력창 -->
+{% if user.is_authenticated %}
 <h3>댓글 입력</h3>
 <form action="{% url 'articles:comments_new' article.pk %}" method="POST">
     {% csrf_token %}
     {{ comment_form }}
     <input type="submit">
 </form>
+{% endif %}
+
 {% endblock %}
