--- a/Django/formclass/articles/templates/articles/edit.html
+++ b/Django/formclass/articles/templates/articles/edit.html
@@ -6,7 +6,7 @@
 
 <form action="" method="POST">
     {% csrf_token %}
-    {{ form.non_field_erros }}
+    {{ form.non_field_errors }}
     <div>
         <!-- 1. label -->
         {{ form.title.label }}
@@ -14,8 +14,7 @@
         {{ form.title }}
         <!-- 3. errors -->
         {{ form.title.errors }}
-    </div>   
-
+    </div>
     <div>
         <!-- 1. label -->
         {{ form.content.label }}
@@ -23,7 +22,8 @@
         {{ form.content }}
         <!-- 3. errors -->
         {{ form.content.errors }}
-    </div>   
+    </div>
+    
     <input type="submit">
 </form>
 
