--- a/Django/formclass/articles/templates/articles/new.html
+++ b/Django/formclass/articles/templates/articles/new.html
@@ -4,15 +4,15 @@
 
 <h1>Article New</h1>
 
-<form action="" method='POST' enctype="multipart/form-data">
+<form action="" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
-    <!-- form 안에 생성되는 것들을 각각 p tag로 감싸겠다. -->
-    {{ form.as_p }} 
+    {{ form.as_p }}
     <!-- <label for="title">제목</label>
-    <input type="text" name="title"><br><br>
-    <label for="content">내용</label><br>
-    <textarea name="content" id="" cols="30" rows="10"></textarea><br> -->
+    <input id="title" type="text" name="title">
+    <label for="content">내용</label>
+    <textarea id="content" name="content" id="" cols="30" rows="10"></textarea> -->
     <input type="submit">
 </form>
+
 
 {% endblock %}
